# lance

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build-tools.sh  build.sh  clippy.toml  deny.toml  deploy-and-test.sh  docker-compose.single.yml  docker-compose.test.yml  genCluster.sh  integration_test.sh  rustfmt.toml  test.sh
.claude/agent-memory/lance-lead-dev/: MEMORY.md  bugs-fixed.md
.github/: FUNDING.yml  RELEASE.md  dependabot.yml
.github/workflows/: ci.yml  complexity-check.yml  mechanical-integrity.yml  release.yml
docs/: Architecture.md  CHANGELOG.md  CodingGuidelines.md  LWP-Specification.md  LanceVsKafkaComparison.md  Monitoring.md  QuorumReplicationFixSummary.md  README.md  RaftQuorumWartime.md  Recoveryprocedures.md
docs/ops/: Benchmarkchaosrunreports.md
k8s/: lance-cluster.yaml  lance-lazy.yaml  lance-solo.yaml
lance/: Cargo.toml
lance/benches/: latency.rs
lance/src/: auth.rs  cli.rs  config.rs  consumer.rs  health.rs  main.rs  shutdown.rs  subscription.rs  topic.rs
lance/src/server/: circuit_breaker.rs  command_handlers.rs  connection.rs  ingestion.rs  mod.rs  multi_actor.rs  recovery.rs  resync.rs  retention.rs  writer.rs
lnc/: Cargo.toml
lnc-bench/: Cargo.toml
lnc-bench/src/: main.rs
lnc-chaos/: Cargo.toml
lnc-chaos/src/: main.rs
lnc-client/: Cargo.toml  README.md
lnc-client/src/: client.rs  connection.rs  consumer.rs  error.rs  grouped.rs  lib.rs  offset.rs  producer.rs  record.rs  standalone.rs  tests.rs  tls.rs
lnc-client/tests/: integration.rs
lnc-core/: Cargo.toml  README.md
lnc-core/src/: backpressure.rs  batch.rs  buffer.rs  chaos.rs  checksum.rs  error.rs  hlc.rs  lib.rs  numa.rs  sort_key.rs  tlv.rs
lnc-index/: Cargo.toml
lnc-index/src/: builder.rs  lib.rs  secondary.rs  sparse.rs
lnc-io/: Cargo.toml
lnc-io/src/: backend.rs  fallback.rs  lib.rs  priority.rs  segment.rs  tier.rs  uring.rs  wal.rs
lnc-metrics/: Cargo.toml  README.md
lnc-metrics/src/: golden_signals.rs  lib.rs  otlp.rs  tracing_export.rs
lnc-network/: Cargo.toml  README.md
lnc-network/src/: compression.rs  connection.rs  frame.rs  lib.rs  protocol.rs  tls.rs
lnc-recovery/: Cargo.toml
lnc-recovery/src/: index_rebuild.rs  lib.rs  segment_recovery.rs  wal_replay.rs
lnc-replication/: Cargo.toml
lnc-replication/src/: actor.rs  audit.rs  cluster.rs  codec.rs  data_plane.rs  discovery.rs  fencing.rs  follower.rs  forward.rs  ingestion.rs  lib.rs  log_store.rs  mode.rs  peer.rs  quorum.rs  raft.rs  resync.rs  segment.rs
lnc-replication/src/schema/: mod.rs  replication.fbs
lnc/src/: commands.rs  inspect.rs  lib.rs  repair.rs  storage.rs
scripts/: ClusterTests.ps1  run-docker-tests.ps1  run-docker-tests.sh  run-integration-tests.ps1  run-integration-tests.sh  start-cluster.ps1  start-cluster.sh
