[package]
name = "lnc-bench"
description = "Throughput and latency benchmark tool for LANCE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "lnc-bench"
path = "src/main.rs"

[dependencies]
lnc-client = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
