[package]
name = "lnc-client"
description = "LANCE client library - Rust client for the LANCE streaming platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/lnc-client"
keywords = ["streaming", "messaging", "kafka", "client", "async"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
lnc-core = { workspace = true }
lnc-network = { workspace = true, features = ["tls"] }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26"
tracing = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[features]
default = []
dangerous-testing = []

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3.14"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
