[package]
name = "lnc-metrics"
description = "Non-blocking telemetry and metrics for LANCE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["metrics", "telemetry", "opentelemetry", "lance"]
categories = ["development-tools::profiling"]
readme = "README.md"

[dependencies]
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
