[package]
name = "lnc-network"
description = "Network layer for LANCE - LWP protocol, connection handling, zero-copy parsing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["networking", "protocol", "lance", "lwp"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
lnc-core = { workspace = true }
lnc-metrics = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
zerocopy = { workspace = true }

# TLS support (optional feature)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rustls-pki-types = { version = "1.9", optional = true }
webpki-roots = { version = "0.26", optional = true }

# Compression support (optional features)
lz4_flex = { version = "0.11", optional = true }
zstd = { version = "0.13", optional = true }

[features]
default = []
tls = ["tokio-rustls", "rustls", "rustls-pki-types", "webpki-roots"]
lz4 = ["lz4_flex"]
compression = ["lz4", "zstd"]

[dev-dependencies]
