[package]
name = "lnc-replication"
description = "Replication layer for LANCE - L1/L3 modes, follower health, quorum management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
tls = ["lnc-network/tls", "tokio-rustls", "rustls"]

[dependencies]
lnc-core = { workspace = true }
lnc-metrics = { workspace = true }
lnc-network = { workspace = true, features = ["lz4"] }
tokio = { workspace = true }
tracing = { workspace = true }
flatbuffers = { workspace = true }
bytes = { workspace = true }
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
lnc-io = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
